project_uts_angular

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Praktikum</title>
-  <base href="https://ayangfhiru.github.io/1900016017_Angular">
+  <base href="https://ayangfhiru.github.io/1900016017_Angular/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,5 +12,5 @@
 <link rel="stylesheet" href="styles.e6989a283dbd3c37de66.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.4d695063e0b33a0257e5.js" defer=""></script><script src="polyfills.de4aec782fb5352c28b9.js" defer=""></script><script src="main.1ec7dcdfa6125c623b06.js" defer=""></script></body>
+<script src="runtime.4d695063e0b33a0257e5.js" defer=""></script><script src="polyfills.de4aec782fb5352c28b9.js" defer=""></script><script src="main.d9891582531ca3ff04e4.js" defer=""></script></body>
 </html>
